--- a/styles/styles.css
+++ b/styles/styles.css
@@ -761,6 +761,7 @@ ul {
 
 .hotels__item:last-child {
   display: flex;
+  border-radius: 15px;
   background-image: url('../assets/img/hotels-last@1x.jpg');
   background-repeat: no-repeat;
   background-size: contain;
