--- a/styles/styles.css
+++ b/styles/styles.css
@@ -224,6 +224,31 @@ ul {
   background-color: var(--color-white);
 }
 
+.burger {
+  display: none;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  z-index:2;
+  overflow: hidden;
+}
+.burger span {
+  width: 30px;
+  height: 2px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--color-dove-gray);
+  transition: all 0.5s;
+}
+.burger span:nth-of-type(2) {
+  top: calc(50% - 10px);
+}
+.burger span:nth-of-type(3) {
+  top: calc(50% + 10px);
+}
+
 .nav__navigation-list {
   display: flex;
   align-items: center;
@@ -1242,6 +1267,247 @@ ul {
 
 }
 
-/* дальше выставить дев тулс на 992, и редактировать для 1024 :) */
+@media (max-width: 1024px) {
+  .services__item-title {
+    font-size: 18px;
+  }
 
+  .booking__form {
+    gap: 0;
+    justify-content: space-between;
+  }
+}
 
+@media (max-width: 992px) {
+  .burger {
+    display: block;
+  }
+
+  .nav__navigation-list {
+    display: none;
+  }
+
+  .offers__lists-wrap {
+    flex-wrap: wrap;
+  }
+
+  .services__item-content {
+    padding: 16px 32px 29px;
+  }
+
+  .services__item-title {
+    line-height: 140%;
+  }
+
+  .advantages__list {
+    --advantages-list-offsets: 2;
+  }
+
+  .hotels__list {
+    --hotels-list-offsets: 1;
+  }
+
+  .booking__form {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+  }
+
+  .form__group {
+    display: flex;
+    align-items: center;
+  }
+
+  .booking__form-title {
+    width: 120px;
+  }
+
+  .contacts__content {
+    flex-direction: column;
+  }
+
+  .contacts__right {
+    height: 400px;
+    border-radius: 10px;
+  }
+}
+
+@media (max-width: 768px) {
+  
+  .header__link-tel {
+    display: none;
+  }
+
+  .services__list {
+    --services-list-offsets: 0;
+  }
+
+  .advantages__list {
+    --advantages-list-offsets: 1;
+  }
+
+  .hotels__list {
+    --hotels-list-offsets: 0;
+  }
+
+  .hotels__item {
+    display: block;
+    min-height: auto;
+  }
+
+  .hotels__item:last-child {
+    background-position: top;
+  }
+
+  .footer__wrap {
+    display: flex;
+    flex-wrap: wrap-reverse;
+    gap: 20px;
+  }
+
+  .footer__left {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
+
+@media (max-width: 567px) {
+  
+  .contacts__list-title {
+    margin-right: 10px;
+  }
+
+  .social-list {
+    flex-direction: row;
+  }
+  
+  .footer__right {
+    justify-content: flex-start;
+    width: 100%;
+  }
+}
+
+@media (max-width: 480px) {
+  
+  .header__container {
+    flex-wrap: wrap;
+    gap: 13px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .navigation__container {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 14px;
+  }
+
+  .navigation__btn-list {
+    gap: 6px;
+  }
+
+  .offers__title {
+    padding-left: 0;
+    text-align: center;
+    font-size: 30px;
+  }
+
+  .offers__item-title {
+    font-size: 30px;
+  }
+  
+  .offers__item-link_small {
+      padding: 30px;
+  }
+
+  .offers__item {
+    min-height: 225px;
+  }
+
+  .about__title {
+    padding-left: 0;
+    text-align: center;
+    font-size: 30px;
+  }
+
+  .services__title {
+    padding-left: 0;
+    text-align: center;
+    font-size: 30px;
+  }
+
+  .advantages__title {
+    padding-left: 0;
+    text-align: center;
+    font-size: 30px;
+  }
+
+  .advantages__list {
+      --advantages-list-offsets: 0;
+  }
+
+  .hotels__title {
+    padding-left: 0;
+    text-align: center;
+    font-size: 30px;
+  }
+
+  .booking__title {
+    padding-left: 0;
+    text-align: center;
+    font-size: 30px;
+  }
+
+  .booking__container  {
+    padding: 12px;
+  }
+
+  .contacts__title {
+    padding-left: 0;
+    text-align: center;
+    font-size: 30px;
+  }
+
+  .contacts__left {
+    width: 100%;
+  }
+
+  .contacts__content {
+   padding: 31px 22px; 
+  }
+
+  .contacts__list-item {
+    flex-direction: column;
+    gap: 10px;
+    padding-bottom: 16px;
+  }
+}
+
+@media (max-width: 380px) {
+
+  .navigation__container  {
+    gap: 24px;
+  }
+  
+  .navigation__btn-list {
+    flex-direction: column;
+    gap: 28px;
+  }
+
+  .offers__item-title {
+      font-size: 26px;
+  }
+
+  .hotels__item-rate {
+      background-size: 29%;
+  }
+
+  .form__group {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .booking__form-title {
+    margin-bottom: 6px;
+  }
+}
