--- a/styles/styles.css
+++ b/styles/styles.css
@@ -365,7 +365,7 @@ ul {
 }
 
 .offers__item-link_small {
-  padding: 40px 45px;
+  padding: 40px 45px 34px;
 }
 
 .offers__item-link {
@@ -382,7 +382,7 @@ ul {
 }
 
 .offers__item-price {
-  margin-bottom: 47px;
+  margin-bottom: 41px;
   color: var(--color-white);
   font-size: 20px;
   font-weight: 400;
@@ -418,11 +418,11 @@ ul {
 }
 
 .offers__item-link:hover .offers__item-bottom-arrow {
-  transform: translateX(11px); 
+  transform: translateX(11px);
 }
 
 .offers__item-link:active .offers__item-bottom-arrow {
-  transform: translateX(0px); 
+  transform: translateX(0px);
 }
 
 .offers__item-link:active .offers__item-bottom-text{
@@ -457,7 +457,7 @@ ul {
 }
 
 .about {
-  padding-bottom: 70px;
+  padding-bottom: 56px;
 }
 
 .about__title {
@@ -574,7 +574,7 @@ ul {
 
 .services__item-link:focus .services__item-title-arrow {
   stroke: var(--color-hokey-pokey);
-  transform: translateX(0px); 
+  transform: translateX(0px);
 }
 
 .services__item-link:hover .services__item-title {
@@ -583,7 +583,7 @@ ul {
 
 .services__item-link:hover .services__item-title-arrow  {
   stroke: var(--color-cream-can);
-  transform: translateX(11px); 
+  transform: translateX(11px);
 }
 
 .services__item-link:active {
@@ -596,7 +596,7 @@ ul {
 
 .services__item-link:active .services__item-title-arrow  {
   stroke: var(--color-buttered-rum);
-  transform: translateX(0px); 
+  transform: translateX(0px);
 }
 
 .advantages {
@@ -672,7 +672,7 @@ ul {
 }
 
 .hotels {
-  padding-bottom: 70px;
+  padding-bottom: 76px;
 }
 
 .hotels__title {
@@ -829,7 +829,7 @@ ul {
   width: 11px;
   height: 18px;
   stroke: var(--color-white);
-  transition-property: transform, stroke; 
+  transition-property: transform, stroke;
   transition-duration: .3s;
 }
 
@@ -982,6 +982,7 @@ ul {
 }
 
 .contacts__list-descr {
+  /* max-width: 130px; */
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -1061,7 +1062,7 @@ ul {
 .footer__wrap {
   display: flex;
   gap: 12%;
-  padding: 45px;
+  padding: 45px 45px 53px;
   border-radius: 15px;
   background-color: var(--color-mine-shaft);
   background-image: url('../assets/svg/logo-footer.svg');
@@ -1091,7 +1092,7 @@ ul {
   display: flex;
   flex-grow: 1;
   flex-direction: column;
-  gap: 15px;
+  gap: 19px;
 }
 
 .footer__link-wrap {
@@ -1172,37 +1173,37 @@ ul {
     background-image: linear-gradient(90deg, rgba(48, 64, 89, 0.84) -2.9%, rgba(53, 65, 83, 0.00) 65.7%),
       url('../assets/img/offers-1@2x.jpg');
   }
-  
+
   .offers__item_2 {
     background-image: linear-gradient(90deg, rgba(48, 64, 89, 0.84) -2.9%, rgba(53, 65, 83, 0.00) 65.7%),
       url('../assets/img/offers-2@2x.jpg');
   }
-  
+
   .offers__item_3 {
     background-image: url('../assets/img/offers-3@2x.jpg');
   }
-  
+
   .services__item_1 {
     background-image: url('../assets/img/services-1@2x.jpg');
   }
-  
+
   .services__item_2 {
     background-image: url('../assets/img/services-2@2x.jpg');
   }
-  
+
   .services__item_3 {
     background-image: url('../assets/img/services-3@2x.jpg');
   }
-  
+
   .services__item_4 {
     background-image: url('../assets/img/services-4@2x.jpg');
   }
-  
-  
+
+
   .hotels__item:last-child {
     background-image: url('../assets/img/hotels-last@2x.jpg');
   }
-  
+
   .contacts__right {
     background-image: url('../assets/img/contacts-1@2x.jpg');
   }
@@ -1218,7 +1219,7 @@ ul {
     padding-left: 25px;
     padding-right: 25px;
   }
-  
+
   .nav__navigation-list {
     gap: 25px;
   }
@@ -1240,7 +1241,7 @@ ul {
   }
 
   .advantages {
-    padding-bottom: 50px;    
+    padding-bottom: 50px;
   }
 
   .advantages__item {
@@ -1254,7 +1255,7 @@ ul {
   hotels {
     padding-bottom: 50px;
   }
-  
+
   .booking {
     padding-bottom: 50px;
   }
@@ -1336,7 +1337,7 @@ ul {
 }
 
 @media (max-width: 768px) {
-  
+
   .header__link-tel {
     display: none;
   }
@@ -1375,7 +1376,7 @@ ul {
 }
 
 @media (max-width: 567px) {
-  
+
   .contacts__list-title {
     margin-right: 10px;
   }
@@ -1383,7 +1384,7 @@ ul {
   .social-list {
     flex-direction: row;
   }
-  
+
   .footer__right {
     justify-content: flex-start;
     width: 100%;
@@ -1391,7 +1392,7 @@ ul {
 }
 
 @media (max-width: 480px) {
-  
+
   .header__container {
     flex-wrap: wrap;
     gap: 13px;
@@ -1418,7 +1419,7 @@ ul {
   .offers__item-title {
     font-size: 30px;
   }
-  
+
   .offers__item-link_small {
       padding: 30px;
   }
@@ -1476,7 +1477,7 @@ ul {
   }
 
   .contacts__content {
-   padding: 31px 22px; 
+   padding: 31px 22px;
   }
 
   .contacts__list-item {
@@ -1491,7 +1492,7 @@ ul {
   .navigation__container  {
     gap: 24px;
   }
-  
+
   .navigation__btn-list {
     flex-direction: column;
     gap: 28px;
